@@ -15,14 +15,15 @@ Dist::Zilla = 4.102341
 Dist::Zilla::Plugin::ArchiveRelease = 0
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::Bugtracker = 0
-Dist::Zilla::Plugin::Git::NextVersion = 0
 Dist::Zilla::Plugin::FakeRelease = 0
+Dist::Zilla::Plugin::Git::NextVersion = 0
 Dist::Zilla::Plugin::Homepage = 0
 Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::Repository = 0
 Dist::Zilla::Plugin::Signature = 0
+Dist::Zilla::Plugin::TaskWeaver = 0.093330
 Dist::Zilla::PluginBundle::Classic = 0
 Dist::Zilla::PluginBundle::Filter = 0
 Dist::Zilla::PluginBundle::Git = 1.101230
 Pod::Elemental::Transformer::List = 0
-Dist::Zilla::Plugin::TaskWeaver = 0.093330
+Pod::Weaver::Section::AllowOverride = 0
