@@ -29,12 +29,27 @@ sub mvp_bundle_config {
 
         [ '@MSCHOUT/Leftovers', _exp('Leftovers'), {} ],
 
+        # SOURCE section using GitHub.  If present in POD already, POD value
+        # will be used.
         [ '@MSCHOUT/SourceGitHub', _exp('SourceGitHub'), {} ],
+        [ 'AllowOverride/Source', _exp('AllowOverride'), {
+                header_re      => '^SOURCE$',
+                action         => 'replace',
+                match_anywhere => 0
+            }
+        ],
         [ '@MSCHOUT/BugsRT',       _exp('BugsRT'),       {} ],
 
         [ '@MSCHOUT/postlude', _exp('Region'), { region_name => 'postlude' } ],
 
+        # AUTHOR section. Will use POD section if present already
         [ '@MSCHOUT/Authors', _exp('Authors'), {} ],
+        [ 'AllowOverride/Authors', _exp('AllowOverride'), {
+                header_re      => '^AUTHORS?$',
+                action         => 'replace',
+                match_anywhere => 0
+            }
+        ],
         [ '@MSCHOUT/Legal',   _exp('Legal'),   {} ],
         [ '@MSCHOUT/List',    _exp('-Transformer'), { transformer => 'List' } ],
     );
