@@ -1,6 +1,7 @@
 Revision history for Dist::Zilla::PluginBundle::MSCHOUT
 
 {{$NEXT}}
+    - PodWeaver: allow SOURCE and AUTHOR(S) sections to be overridden.
 
 0.23  2016-06-27
     - switch from deprecated BumpVersionFromGit to Git::NextVersion.  This is a
